# eightfish-solana-cli

./: Cargo.toml
src/: constants.rs  eightfish_cli.rs  main.rs
